coffreo/kubernetes/1.0/.container/deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${APP_NAME}-service
spec:
  ports:
    - port: 80
      protocol: TCP
      name: nginx
      targetPort: 8080
  selector:
    app: ${APP_NAME}
